# model-un

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  main.rs  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-push-container.yaml  e2e-tests.yaml  lint-js.yaml  lint-rust.yaml  sbom.yaml  security.yaml  test-rust.yaml
client/: eslint.config.js  game.js  index.html  package-lock.json  package.json  style.css
client/img/: environment.yml  generate_sprites.py  notes.md
deploy/: Dockerfile  docker-compose.yml  nginx.conf  start.sh
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: golden-path.spec.js
src/: connection_pool.rs  counter.rs  game.rs  integration_tests.rs  interface.rs  lib.rs  main.rs  structs.rs
src/static/: game.js  index.html  style.css
tests/: integration_tests.rs  websocket_load_test.rs
