[package]
name = "modelUN"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "modelun"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
