[package]
name = "modelUN"
version = "0.1.0"
edition = "2024"

[lib]
name = "model_un"
path = "src/lib.rs"

[[bin]]
name = "modelun"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = { version = "0.4", features = ["websocket", "server"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
warp = { version = "0.4", features = ["test"] }
